Fix invisibility bug on iOS

--- a/src/app/modules/admin/pages/classes/class/class.component.sass
+++ b/src/app/modules/admin/pages/classes/class/class.component.sass
@@ -1,5 +1,8 @@
 @import ../../../../../../var
 
+::ng-deep div.class
+    -webkit-transform: translate3d(0, 0, 0)
+
 .toolbar-extention
     position: absolute
     left: 0
