--- a/src/app/modules/admin/pages/classes/classes.component.sass
+++ b/src/app/modules/admin/pages/classes/classes.component.sass
@@ -1,5 +1,8 @@
 @import ../../../../../var
 
+::ng-deep div.classes
+    -webkit-transform: translate3d(0, 0, 0)
+
 .toolbar-extention
     position: absolute
     left: 0
